# mw_lidar_fusion

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml  config_2.yaml  config_alt.yaml
config/controller_config/: mw_maxl_planner.yaml
config/costmap_config/: costmap_common_params.yaml  global_costmap_params.yaml
config/mission_executive_config/: mission_executive_params.yaml
config/slam_toolbox_config/: slam_toolbox_localization.yaml  slam_toolbox_mapping.yaml
include/: fuse_scan.hpp
launch/: default.rviz  lidar_fusion.launch  run_mw_mapping.launch  run_mw_mapping_slam_toolbox.launch  run_mw_navigation.launch  run_mw_navigation_slam_toolbox.launch  run_mw_navigation_with_no_map.launch  run_mw_navigation_with_no_map_slam_toolbox.launch
launch/secondary_launch/: sick_safetyscanners.launch  sick_safetyscanners_raw.launch  start_controller_executive.launch  start_costmap.launch  start_difacto_hardware.launch  start_difacto_hardware_raw.launch  start_follow_tracker.launch  start_global_planner.launch  start_mw_mapping.launch  start_mwpfl.launch  start_nav_server.launch  start_recovery_executive.launch  start_robot_localization.launch  start_rviz.launch  tune_localization_slam_toolbox_from_bag.launch  tune_mapping.launch  tune_mapping_slam_toolbox_from_bag.launch
maps/: mapv1b.pgm  mapv1b.yaml
src/: fuse_scan.cpp
